Bug 73442 - Touch device not mapped to hotplugged output
Summary: Touch device not mapped to hotplugged output
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium minor
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-09 17:10 UTC by U. Artie Eoff
Modified: 2014-01-10 18:16 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description U. Artie Eoff 2014-01-09 17:10:15 UTC
When a touch device is discovered by Weston and contains a ENV{WL_OUTPUT} udev rule, it does not map to the specified output if it does not exist.  This is expected.  However, if that specified output is later hotplugged then that output does not get mapped to the previously discovered touch device... unless you replug-in the touch device.

1. Map touch device to ENV{WL_OUTPUT}="VGA1" in udev rules.
2. Plug in touch device.
3. Unplug VGA1
4. Launch Weston
5. Plug in VGA1
6. Observe touch device is not mapped to VGA1
7. Unplug touch device
8. Plug in touch device
9. Observe touch device is mapped to VGA1

It is expected that a hotplugged output will be mapped to the touch device when the touch device is already discovered and contains a map rule for that output.
Comment 1 Kristian Høgsberg 2014-01-10 00:50:10 UTC
commit 8ca9544e0620c7cbce6c1934f6da7b64d3b4c464
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Thu Jan 9 16:41:58 2014 -0800

    input: Re-pair touch screen when monitor is plugged in
    
    https://bugs.freedesktop.org/show_bug.cgi?id=73442


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.