input: Re-pair touch screen when monitor is plugged in

https://bugs.freedesktop.org/show_bug.cgi?id=73442